--- a/src/App.css
+++ b/src/App.css
@@ -54,4 +54,30 @@ blockquote {
     margin-bottom: 1rem;
 }
 
+.scrollTop {
+    position: fixed;
+    right: 1rem;
+    width: 100%;
+    bottom: 1rem;
+    align-items: center;
+    height: 20px;
+    justify-content: center;
+    z-index: 1000;
+    cursor: pointer;
+    animation: fadeIn 0.3s;
+    transition: opacity 0.4s;
+    opacity: 0.5;
+}
 
+.scrollTop:hover{
+    opacity: 1;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0.5;
+    }
+}
